order-service.yml
# Service Configuration
apiVersion: v1
kind: Service
metadata:
  name: order-service # Nama Service
spec:
  selector:
    app: order # Selector untuk menentukan pod yang dipilih
  ports:
    - protocol: TCP
      port: 3000 # Port yang di-expose di dalam cluster
      name: http
      targetPort: 3000 # Port target pada pod
      nodePort: 30000 # expose port 30000, agar bisa diakses menggunakan ip minikube
  type: NodePort # Tipe Service
---
# Deployment Configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order # Nama Deployment untuk layanan pesanan
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: ghcr.io/avnanrahman/order-service:latest # menggunakan image yang sudah dibuat sebelumnya
        # Limit resource yang digunakan
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000 # set conatiner atau pod port
