shipping-service.yml
# Service Configuration
apiVersion: v1
kind: Service
metadata:
  name: shipping-service # Nama Service
spec:
  selector:
    app: shipping # Selector untuk menentukan pod yang dipilih
  ports:
    - protocol: TCP
      port: 3001 # Port yang di-expose di dalam cluster
      name: http
      targetPort: 3001 # Port target pada pod
      nodePort: 30001 # expose port 30002, agar bisa diakses menggunakan ip minikube
  type: NodePort # Tipe Service
---
# Deployment Configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping # Nama Deployment untuk layanan pengiriman
spec:
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - name: shipping
        image: ghcr.io/avnanrahman/shipping-service:latest # menggunakan image yang sudah dibuat sebelumnya
        # Limit resource yang digunakan
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001 # set conatiner atau pod port
